challenges/12_expose-ingress/service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-caddy-service
  namespace: sebastiankr
spec:
  type: ClusterIP
  selector:
    app: caddy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
